# LearnOpenGL

./: CMakeLists.txt
include/: Shader.hpp
lib/: Camera.cpp  Shader.cpp  Shader.hpp
src/: Shader.cpp  main.cpp  shader.vert
src/getting-started/: main.cpp
